# app/Http/Requests/MessageRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class ReadMessagesRequest extends FormRequest
+class MessageRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -14,6 +14,8 @@ class ReadMessagesRequest extends FormRequest
     public function authorize()
     {
         return true;
+//todo раскоментировать когда прикрутим автиоризацию
+//        return false;
     }
 
     /**
@@ -24,8 +26,8 @@ class ReadMessagesRequest extends FormRequest
     public function rules()
     {
         return [
-            'ids' => 'required|array',
-            'ids.*' => 'integer|exists:messengers,id'
+           "text_messenger"=> "required",
         ];
     }
+    //todo messages
 }
