# swagger.yaml
@@ -3,7 +3,7 @@ info:
   title: Swagger Petstore - OpenAPI 3.0
   description: |-
     This is a sample swagger
-  version: 1.0.2
+  version: 1.0.6
 
 servers:
   - url: http://localhost:8000/api
@@ -185,6 +185,31 @@ paths:
                 items:
                   oneOf :
                     - $ref: '#/components/schemas/Message'
+    post:
+      tags:
+        - message
+      summary: Отпарвить сообщение
+      parameters:
+        - name: chat_id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewMessage'
+      responses:
+        '200':
+          description: description
+          content:
+            application/json:
+              schema:
+                type : array
+                items:
+                  oneOf :
+                    - $ref: '#/components/schemas/Message'
 
   /message/read_messages:
     post:
@@ -256,6 +281,42 @@ paths:
               schema:
                 $ref: '#/components/schemas/Category'
 
+  /signup:
+    post:
+      tags:
+        - auth
+      summary: Регистрация
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRegister'
+      responses:
+        '200':
+          description: description
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthToken'
+  /login:
+    post:
+      tags:
+        - auth
+      summary: Вход
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthLoginReq'
+      responses:
+        '200':
+          description: description
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthLoginRes'
+
+
 
 components:
   schemas:
@@ -290,6 +351,12 @@ components:
           enum:
             - sent
             - read
+    NewMessage:
+      type: object
+      properties:
+        text_messenger:
+          type: string
+          example: "new message"
     Chat:
       type: object
       properties:
@@ -321,6 +388,49 @@ components:
         user_name:
           type: string
           example: "Nastya"
+    AuthToken:
+      type: object
+      properties:
+
+        user_token:
+          type: string
+          example: "xdfdfsgw534563"
+    AuthRegister:
+      type: object
+      properties:
+        name:
+          type: string
+          example: "test"
+        last_name:
+          type: string
+          example: "test"
+        email:
+          type: string
+          example: "test@mail.ru"
+        password:
+          type: string
+          example: "123"
+    AuthLoginReq:
+      type: object
+      properties:
+        email:
+          type: string
+          example: "test@mail.ru"
+        password:
+          type: string
+          example: "123"
+    AuthLoginRes:
+      type: object
+      properties:
+        user_token:
+          type: string
+          example: "xdfdfsgw534563"
+        user_role:
+          type: string
+          example: "null"
+        user_id:
+          type: number
+          example: 1
     Post:
       type: object
       properties:
